--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -9,7 +9,8 @@
 
 @import 'pages/home';
 
-@import 'layour/header';
+@import 'layout/grid';
+@import 'layout/header';
 
 @import 'components/button';
 
