Added icon font

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,7 +217,10 @@ body {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: 2px;
-    position: absolute; }
+    position: absolute;
+    z-index: 10;
+    outline-offset: 1.2rem;
+    transition: all .2s; }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
@@ -225,8 +228,15 @@ body {
       right: -2rem;
       top: 2rem; }
     .composition__photo--p3 {
-      left: 8rem;
+      left: 14%;
       top: 15rem; }
+    .composition__photo:hover {
+      outline: 1rem solid #55c57a;
+      transform: scale(1.15) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
 
 .section-about {
   background-color: #f7f7f7f7;
