--- a/public/sass/components/_composition.scss
+++ b/public/sass/components/_composition.scss
@@ -6,6 +6,9 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
     border-radius: 2px;
     position: absolute;
+    z-index: 10;
+    outline-offset: 1.2rem;
+    transition: all .2s;
 
     &--p1 {
       left: 0;
@@ -18,9 +21,20 @@
     }
 
     &--p3 {
-      left: 8rem;
+      left: 14%;
       top: 15rem;
     }
+
+    &:hover {
+      outline: 1rem solid $color-primary;
+      transform: scale(1.15) translateY(-.5rem);
+      box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+      z-index: 20;
+    }
+  }
+
+  &:hover &__photo:not(:hover) {
+    transform: scale(.95);
   }
 
 }
