--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -13,4 +13,10 @@
   ), 
   url(../img/nat-4.jpg);
   background-size: cover;
+  margin-top: -9rem;
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
 }
