Added image to card

--- a/public/sass/components/_card.scss
+++ b/public/sass/components/_card.scss
@@ -1,4 +1,6 @@
 .card {
+
+  //Functionailty
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
@@ -13,6 +15,9 @@
     top: 0;
     left: 0;
     width: 100%;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
     backface-visibility: hidden;
     transition: all .8s ease; 
     
@@ -31,10 +36,30 @@
   }
 
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
   
   &:hover &__side--back {
     transform: rotateY(0deg);
   } 
+
+
+  // Front Side Styling
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+
+    &--1 {
+      background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg)
+    }
+
+    &--2 {
+      background-image: url(../img/nat-5.jpg)
+    }
+
+    &--3 {
+      background-image: url(../img/nat-5.jpg)
+    }
+  }
 }
