--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -13,3 +13,11 @@
 .u-margin-bottom-small { 
   margin-bottom: 1.5rem; 
 }
+
+.u-margin-top-extra-large {
+  margin-top: 10rem;
+}
+
+.u-margin-top-large {
+  margin-top: 8rem;
+}
