--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -33,6 +33,15 @@
       background-color: $color-white;
     }
   }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
   
   &::after {
     content: '';
