--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,10 @@ body {
   padding: 25rem 0 15rem;
   margin-top: -10rem; }
 
+.section-stories {
+  background-color: #f7f7f7f7;
+  padding: 15rem 0; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -376,6 +380,29 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 6rem 6rem 6rem 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__img {
+    height: 100%; }
+  .story__text {
+    transform: skewX(12deg); }
+
 .section-about {
   background-color: #f7f7f7f7;
   padding: 25rem 0;
@@ -394,3 +421,7 @@ body {
   background-color: #f7f7f7f7;
   padding: 25rem 0 15rem;
   margin-top: -10rem; }
+
+.section-stories {
+  background-color: #f7f7f7f7;
+  padding: 15rem 0; }
