--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -26,3 +26,8 @@
   padding: 25rem 0 15rem; 
   margin-top: -10rem;
 }
+
+.section-stories {
+  background-color: $color-grey-light-1;
+  padding: 15rem 0;
+}
