--- a/public/sass/components/_story.scss
+++ b/public/sass/components/_story.scss
@@ -7,6 +7,7 @@
   padding: 6rem 6rem 6rem 9rem;
   font-size: $default-font-size;
   transform: skewX(-12deg);
+  position: relative;
 
   &__shape {
     width: 15rem;
@@ -21,9 +22,36 @@
 
   &__img {
     height: 100%;
+    backface-visibility: hidden;
+    transform: translateX(-4rem) scale(1.3);
+    transition: all .5s;
   }
 
   &__text {
     transform: skewX(12deg)
+  }
+
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: $color-white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    backface-visibility: hidden;
+    transition: all .5s;
+  }
+
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+
+  &:hover &__img {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
   }
 }
