--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'layout/grid';
 @import 'layout/header';
 
+@import 'components/bg-video';
 @import 'components/button';
 @import 'components/card';
 @import 'components/composition';
