--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -1,16 +1,23 @@
 .btn {
+  &,
   &:link,
   &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
-    position: relative;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 1.5rem 4rem;
+      display: inline-block;
+      border-radius: 10rem;
+      transition: all .2s;
+      position: relative;
+      font-size: $default-font-size;
+
+      //Change for the <button> element
+      border: none;
+      cursor: pointer;
   }
   
-  &:hover {
+  &:hover,
+  &:focus {
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba($color-black, 0.2);
 
@@ -20,7 +27,8 @@
     }
   }
   
-  &:active {
+  &:active,
+  &:focus {
     transform: translateY(-1px);
     box-shadow: 0 5px 10px rgba($color-black, 0.2);
   }
