--- a/public/css/style.css
+++ b/public/css/style.css
@@ -412,12 +412,18 @@ body {
 
 .footer {
   background-color: #333;
+  color: #f7f7f7f7;
   padding: 10rem 0;
   font-size: 1.4rem; }
   .footer__logo-box {
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 6rem; }
   .footer__logo {
     width: 15rem; }
+  .footer__navigation {
+    border-top: 1px solid #eee;
+    padding-top: 2rem;
+    display: inline-block; }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -425,13 +431,21 @@ body {
     .footer__item:not(:last-child) {
       margin-right: 1.5rem; }
   .footer__link:link, .footer__link:visited {
+    background-color: #333;
     color: #f7f7f7f7;
     text-decoration: none;
     text-transform: uppercase;
-    display: inline-block; }
+    display: inline-block;
+    transition: all .2s; }
   .footer__link:hover, .footer__link:active {
     color: #55c57a;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4); }
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(5deg) scale(1.3); }
+  .footer__copyright {
+    border-top: 1px solid #eee;
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
 
 .form__group:not(:last-child) {
   margin-bottom: 2rem; }
