--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -19,6 +19,7 @@
 @import 'components/feature-box';
 @import 'components/footer';
 @import 'components/form';
+@import 'components/navigation';
 @import 'components/story';
 
 @import 'pages/home';
