--- a/public/sass/components/_navigation.scss
+++ b/public/sass/components/_navigation.scss
@@ -12,6 +12,9 @@
     right: 6rem;
     border-radius: 50%;
     z-index: 200;
+    box-shadow: 0 1rem 3rem rgba($color-black, .1);
+    cursor: pointer;
+    text-align: center;
   }
 
   &__background {
@@ -23,23 +26,26 @@
     right: 6.5rem;
     background-image: radial-gradient($color-primary-light, $color-primary-dark);
     z-index: 100;
-
-    transform: scale(80);
+    transition: transform .9s cubic-bezier(0.86, 0, 0.07, 1);
   }
 
   &__nav {
     height: 100vh;
-    width: 100%;
+    width: 0;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     z-index: 150;
+
+    opacity: 0;
+    transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
   &__list {
     @include center;
     list-style: none;
     text-align: center;
+    width: 100%;
   }
 
   &__item {
@@ -49,6 +55,7 @@
   &__link {
     &:link,
     &:visited {
+      display: inline-block;
       font-size: 3rem;
       font-weight: 300;
       padding: 1rem 2rem;
@@ -69,6 +76,58 @@
     &:active {
       background-position: 100%;
       color: $color-primary;
+      transform: translateX(1rem);
     }
+  }
+
+  //Functionality
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
+  }
+
+  // Icon
+
+  &__icon {
+    position: relative;
+    margin-top: 3.4rem;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+      transition: all .2s;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+    }
+
+    &::before {
+      top: -.8rem;
+    }
+
+    &::after {
+      top: .8rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem;
   }
 }
