--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -20,6 +20,7 @@
 @import 'components/footer';
 @import 'components/form';
 @import 'components/navigation';
+@import 'components/popup';
 @import 'components/story';
 
 @import 'pages/home';
