--- a/public/css/style.css
+++ b/public/css/style.css
@@ -639,10 +639,8 @@ body {
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 300;
   opacity: 0;
-  visibility: hidden; }
-  .popup:target {
-    opacity: 1;
-    visibility: visible; }
+  visibility: hidden;
+  transition: all .3s; }
   .popup__content {
     position: absolute;
     top: 50%;
@@ -655,7 +653,10 @@ body {
     position: fixed;
     z-index: 350;
     display: table;
-    overflow: hidden; }
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all .5s .2s; }
   .popup__left {
     width: 33%;
     display: table-cell; }
@@ -672,6 +673,24 @@ body {
     margin-bottom: 4rem;
     column-count: 2;
     column-gap: 4rem; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    line-height: 1;
+    display: inline-block;
+    transition: all .2s; }
+  .popup__close:hover {
+    color: #55c57a; }
 
 .story {
   width: 75%;
