--- a/public/sass/components/_popup.scss
+++ b/public/sass/components/_popup.scss
@@ -8,11 +8,7 @@
   z-index: 300;
   opacity: 0;
   visibility: hidden;
-
-  &:target {
-    opacity: 1;
-    visibility: visible;
-  }
+  transition: all .3s;
 
   &__content {
     @include center;
@@ -24,6 +20,9 @@
     z-index: 350;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all .5s .2s;
   }
 
   &__left {
@@ -49,5 +48,34 @@
 
     column-count: 2;
     column-gap: 4rem;
+  }
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      line-height: 1;
+      display: inline-block;
+      transition: all .2s;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
