--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -3,9 +3,27 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 html {
   font-size: 62.5%;
+
+  @include respond(tablet) {
+    font-size: 56.25%;  //1rem = 9px, 9/16 = 56.25%
+  }
+  @include respond(phone) {
+    font-size: 50%;     //1rem = 8px, 8/16 = 50%
+  }
+  @include respond(desktop) {
+    font-size: 75%;     //1rem = 12px, 12/16 = 75%
+  }
+}
+
+body {
+  box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tablet) {
+    padding: 0;
+  }
 }
