--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -1,10 +1,9 @@
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  // font-size: 16px;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
 }
 
 .heading-primary {
@@ -12,24 +11,33 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 
   &--main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
   
     animation: moveInLeft 1s ease-in;
+
+    @include respond(phone) {
+      letter-spacing: 1rem; 
+      font-family: 5rem;
+    }
   }
   
   &--sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.74rem;
   
     animation: moveInRight 1s ease-in;
+
+    @include respond(phone) {
+      letter-spacing: .5rem; 
+    }
   }
 }
 
@@ -44,6 +52,14 @@ body {
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s;
+
+  @include respond(tablet) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
