--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -4,9 +4,17 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
+  @include respond(tablet) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 6rem;
+
+    @include respond(tablet) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -17,6 +25,11 @@
     border-top: 1px solid $color-grey-light-2;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tablet) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -55,5 +68,11 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tablet) {
+      width: 100%;
+      text-align: center;
+      float: none;
+    }
   }
 }
