--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -4,10 +4,18 @@
 
 .u-margin-bottom-large { 
   margin-bottom: 8rem !important; 
+
+  @include respond(tablet) {
+    margin-bottom: 5rem !important; 
+  }
 }
 
 .u-margin-bottom-medium { 
   margin-bottom: 4rem !important; 
+
+  @include respond(tablet) {
+    margin-bottom: 3rem !important; 
+  }
 }
 
 .u-margin-bottom-small { 
