--- a/public/sass/components/_composition.scss
+++ b/public/sass/components/_composition.scss
@@ -10,19 +10,44 @@
     outline-offset: 1.2rem;
     transition: all .2s;
 
+    @include respond(tablet) {
+      float: left;
+      position: relative;
+      width: 33.33%;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+
+      @include respond(tablet) {
+        top: 0;
+        transform: scale(1.2);
+      }
     }
 
     &--p2 {
       right: -2rem;
       top: 2rem;
+
+      @include respond(tablet) {
+        top: -1rem;
+        right: 0;
+        transform: scale(1.3);
+        z-index: 100;
+      }
     }
 
     &--p3 {
       left: 14%;
       top: 15rem;
+
+      @include respond(tablet) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
