--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -23,17 +23,29 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tablet) {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem; 
   margin-top: -10rem;
+
+  @include respond(tablet) {
+    padding: 20rem 0 10rem;
+  }
 }
 
 .section-stories {
   padding: 15rem 0;
   position: relative;
+
+  @include respond(tablet) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
@@ -43,6 +55,10 @@
     $color-primary-light, 
     $color-primary-dark
   );
+
+  @include respond(tablet) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
