--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -8,11 +8,11 @@
 html {
   font-size: 62.5%;
 
-  @include respond(tablet) {
-    font-size: 56.25%;  //1rem = 9px, 9/16 = 56.25%
+  @include respond(tab-land) { // width < 1200?
+    font-size: 56.25%;  //1 rem = 9px, 9/16 = 50%
   }
-  @include respond(phone) {
-    font-size: 50%;     //1rem = 8px, 8/16 = 50%
+  @include respond(tab-port) { // width < 900?
+    font-size: 50%;     //1 rem = 8px, 8/16 = 50%
   }
   @include respond(desktop) {
     font-size: 75%;     //1rem = 12px, 12/16 = 75%
@@ -23,7 +23,7 @@ body {
   box-sizing: border-box;
   padding: 3rem;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 0;
   }
 }
