--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -53,7 +53,7 @@ body {
   letter-spacing: .2rem;
   transition: all .2s;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     font-size: 3rem;
   }
 
