--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -5,7 +5,7 @@
 .u-margin-bottom-large { 
   margin-bottom: 8rem !important; 
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     margin-bottom: 5rem !important; 
   }
 }
@@ -13,7 +13,7 @@
 .u-margin-bottom-medium { 
   margin-bottom: 4rem !important; 
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     margin-bottom: 3rem !important; 
   }
 }
