--- a/public/sass/components/_composition.scss
+++ b/public/sass/components/_composition.scss
@@ -10,7 +10,7 @@
     outline-offset: 1.2rem;
     transition: all .2s;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       float: left;
       position: relative;
       width: 33.33%;
@@ -21,7 +21,7 @@
       left: 0;
       top: -2rem;
 
-      @include respond(tablet) {
+      @include respond(tab-port) {
         top: 0;
         transform: scale(1.2);
       }
@@ -31,7 +31,7 @@
       right: -2rem;
       top: 2rem;
 
-      @include respond(tablet) {
+      @include respond(tab-port) {
         top: -1rem;
         right: 0;
         transform: scale(1.3);
@@ -43,7 +43,7 @@
       left: 14%;
       top: 15rem;
 
-      @include respond(tablet) {
+      @include respond(tab-port) {
         top: 1rem;
         left: 0;
         transform: scale(1.1);
