--- a/public/sass/components/_feature-box.scss
+++ b/public/sass/components/_feature-box.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
   transition: all .3s;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 2rem;
   }
 
@@ -20,7 +20,7 @@
     background-clip: text;
     color: transparent;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       margin-bottom: 0;
     }
   }
