--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -4,7 +4,7 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 8rem 0;
   }
 
@@ -12,7 +12,7 @@
     text-align: center;
     margin-bottom: 6rem;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       margin-bottom: 6rem;
     }
   }
@@ -26,7 +26,7 @@
     padding-top: 2rem;
     display: inline-block;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       width: 100%;
       text-align: center;
     }
@@ -69,7 +69,7 @@
     width: 80%;
     float: right;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       width: 100%;
       text-align: center;
       float: none;
