--- a/public/sass/components/_navigation.scss
+++ b/public/sass/components/_navigation.scss
@@ -16,7 +16,7 @@
     cursor: pointer;
     text-align: center;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       top: 4rem;
       right: 4rem;
     }
@@ -38,7 +38,7 @@
     z-index: 100;
     transition: transform .9s cubic-bezier(0.86, 0, 0.07, 1);
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       top: 4.5rem;
       right: 4.5rem;
     }
