--- a/public/sass/components/_story.scss
+++ b/public/sass/components/_story.scss
@@ -9,6 +9,14 @@
   transform: skewX(-12deg);
   position: relative;
 
+  @include respond(tab-port) {
+    padding: 4rem 4rem 4rem 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -18,6 +26,10 @@
     clip-path: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
@@ -28,7 +40,11 @@
   }
 
   &__text {
-    transform: skewX(12deg)
+    transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
