--- a/public/sass/layout/_grid.scss
+++ b/public/sass/layout/_grid.scss
@@ -5,12 +5,12 @@
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       margin-bottom: $gutter-vertical-small;
     }
   }
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     max-width: 50rem;
     padding: 0 3rem;
   }
@@ -23,13 +23,13 @@
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
 
-      @include respond(tablet) {
+      @include respond(tab-port) {
         margin-right: 0;
         margin-bottom: $gutter-vertical-small;
       }
     }
 
-    @include respond(tablet) {
+    @include respond(tab-port) {
       width: 100% !important;
     }
   }
