--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -3,7 +3,7 @@
   padding: 30rem 0;
   margin-top: -25vh;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 25rem 0;
   }
 }
@@ -24,7 +24,7 @@
     transform: skewY(7deg);
   }
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
@@ -34,7 +34,7 @@
   padding: 25rem 0 15rem; 
   margin-top: -10rem;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 20rem 0 10rem;
   }
 }
@@ -43,7 +43,7 @@
   padding: 15rem 0;
   position: relative;
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
@@ -56,7 +56,7 @@
     $color-primary-dark
   );
 
-  @include respond(tablet) {
+  @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
@@ -71,6 +71,14 @@
   background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+  @include respond(tab-land) {
+    
+  }
+
+  @include respond(tab-port) {
+    
+  }
 
   &__form {
     width: 50%;
